--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <h1>Welcome to the FullStack Zoo</h1>
-    </header>
+        <img src="zoo-logo.png" alt="FullStack Zoo Logo" 
     <main>
         <section>
             <h2>Bears</h2>
@@ -44,7 +44,7 @@
             <ul>
                 <li><a href="Wren.html" alt="Wren the Alligator">Wren</a></li>
                 <li><a href="Aspen.html" alt="Aspen the Alligator">Aspen</a></li>
-                <li><a href="Mika.html" alt="Ally the Alligator">Ally</a></li>
+                <li><a href="Mika.html" alt="Mika the Alligator">Mika</a></li>
             </ul>
         </section>
     </main>
