--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"> <!-------->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,10 +8,12 @@
 <body>
     <header>
         <h1>Welcome to the FullStack Zoo</h1>
-        <img src="zoo-logo.png" alt="FullStack Zoo Logo" 
+        <img src="zoo-logo.png" alt="FullStack Zoo Logo">
+    </header>
     <main>
         <section>
             <h2>Bears</h2>
+            <img src="bears.jpg" alt="Bears at the zoo" width="300">
             <ul>
                 <li><a href="ollie.html" alt="Ollie the Bear">Ollie/a></li>
                 <li><a href="Mona.html" alt="Mona The Bear">Mona</a></li>
@@ -26,6 +28,7 @@
         </section>
         <section>
             <h2>Lions</h2>
+            <img src="lions.jpg" alt="Lions at the zoo" width="300">
             <ul>
                 <li><a href="Melia.html" alt="Melia the Lion">Melia</a></li>
                 <li><a href="Karl.html" alt="Karl the Lion">Karl</a></li>
@@ -33,6 +36,7 @@
         </section>
         <section>
             <h2>Monkeys</h2>
+            <img src="monkeys.jpg" alt="Monkeys at the zoo" width="300">
             <ul>
                 <li><a href="Cookie.html" alt="Cookie the Monkey">Cookie</a></li>
                 <li><a href="Earl.html" alt="Earl the Monkey">Earl</a></li>
@@ -41,6 +45,7 @@
         </section>
         <section>
             <h2>Alligators</h2>
+            <img src="alligators.jpg" alt="Alligators at the zoo" width="300">
             <ul>
                 <li><a href="Wren.html" alt="Wren the Alligator">Wren</a></li>
                 <li><a href="Aspen.html" alt="Aspen the Alligator">Aspen</a></li>
